# restaurant-agent

./: .gitignore  README.md  build.sh  pyproject.toml
app/: db.py  lambda_handler.py  main.py  sales_data.json
static/: index.html
